# resumeforge

./: .gitignore  BUGFIX_PARTIAL_REPLACEMENT.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
code-agent/: agent.py  intent_detector.py  latex_processor.py  main.py  prompts.py  pyproject.toml  requirements.txt  tools.py
code-agent/backend/: __init__.py  agent.py  config.py  state.py
code-agent/backend/mcp/: __init__.py  session.py
code-agent/backend/nodes/: __init__.py  compiler.py  file_writer.py  formatter.py  llm.py  mode_detector.py  parser.py
code-agent/backend/tools/: __init__.py  compiler.py  file_writer.py  formatter.py
code-agent/backend/utils/: __init__.py  latex_parser.py  llm_output.py
frontend/: .dockerignore  Dockerfile  auth.config.ts  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/compile/: route.ts
frontend/app/api/save-resume/: route.ts
frontend/app/api/update-resume/: route.ts
frontend/app/editor/: editor-content.tsx  page.tsx
frontend/components/: authenticated-header.tsx  chat.tsx  client-authenticated-header.tsx  dashboard.tsx  editor.tsx  header.tsx  pdf-preview.tsx  resume-card.tsx  sign-in.tsx
frontend/lib/: actions.ts  types.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20250703155635_resumes/: migration.sql
latex-api/: Dockerfile  main.py
