[project]
name = "code-agent"
version = "0.1.0"
description = "ResumeForge AI Agent - LaTeX resume builder"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "google-generativeai>=0.8.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "langgraph>=0.2.27",
    "langchain-google-genai>=2.0.4",
    "langchain-mcp>=0.1.3",
]
